<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    tools:context="com.example.user.sportslover.activity.SettingActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg_color"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/mybackground"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:padding="@dimen/normal_space"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/normal_space"
                android:text="@string/settings"
                android:textSize="@dimen/title_text_size" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/accountManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:drawableRight="@drawable/arrow_normal"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/account"
        android:textSize="16dp" />

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:drawableRight="@drawable/arrow_normal"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/privacySettings"
        android:textSize="16dp" />


        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/sportsSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="@dimen/normal_space"
            android:drawableRight="@drawable/arrow_normal"
            android:gravity="center_vertical"
            android:padding="@dimen/normal_space"
            android:text="@string/sportsSettings"
            android:textSize="16dp" />


    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="@dimen/normal_space"
            android:gravity="center_vertical"
            android:padding="@dimen/normal_space"
            android:text="@string/informExercise"
            android:textSize="16dp"  />

        <ToggleButton
            android:id="@+id/mTogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:button="@drawable/switch_button"
            android:checked="false"
            android:layout_marginLeft="80dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Lnotification"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/normal_space"
            android:gravity="center_vertical"
            android:padding="@dimen/normal_space"
            android:text="@string/dailyNotification"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_notifyTime"
            android:text="19:00"
            android:layout_marginLeft="160dp"/>

    </LinearLayout>




<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:id="@+id/cache">
    <TextView
        android:layout_marginTop="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/normal_space"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/clean"
        android:textSize="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cacheSize"
        android:text="0M"
        android:layout_marginLeft="160dp"/>
</LinearLayout>


    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:drawableRight="@drawable/arrow_normal"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/about"
        android:textSize="16dp" />

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="@dimen/normal_space"
        android:drawableRight="@drawable/arrow_normal"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space"
        android:text="@string/updates"
        android:textSize="16dp" />



</LinearLayout>
