<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="30dp">
     <RelativeLayout
        android:orientation="horizontal"
         android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/mybackground"
        >

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/sendDynamic2"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />

    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityName"/>

        <EditText
            android:id="@+id/edit_activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:enabled="true"
            android:gravity="top"
            android:hint="@string/inputActivity"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minHeight="70dp"
            android:minLines="3"
            android:padding="4dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textSize="14dp" />
    </LinearLayout>
        <GridView
            android:id="@+id/gridView"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:cacheColorHint="#00000000"
            android:columnWidth="100dp"
            android:fadingEdge="none"
            android:horizontalSpacing="3dp"
            android:listSelector="#00000000"
            android:numColumns="auto_fit"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:transcriptMode="alwaysScroll"
            android:verticalSpacing="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityContent"/>
            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:enabled="true"
                android:gravity="top"
                android:hint="@string/inputContent"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minHeight="70dp"
                android:minLines="3"
                android:padding="4dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

