<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.sportslover.activity.PersonalDataActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/mybackground"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/personal_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:padding="@dimen/normal_space"
            android:src="@drawable/ic_back" />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personalData"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profilePhoto"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/iv_Changephoto"
            android:background="@drawable/photo"
            android:layout_marginLeft="180dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lname"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="200dp"
            android:layout_gravity="center"
            android:text="TCLsys" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lgender"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gender"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_gender"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="200dp"
            android:layout_gravity="center"
            android:text="女" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lheight"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Height"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_height"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="200dp"
            android:text="160cm" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lweight"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Weight"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_weight"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="200dp"
            android:text="50kg" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lbirthday"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Brithday"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_birthday"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="180dp"
            android:text="2017-9-27" />

    </LinearLayout>

</LinearLayout>
