<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_send_dynamic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.sportslover.activity.SendDynamicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/mybackground"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/personal_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:padding="@dimen/normal_space"
            android:src="@drawable/ic_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sendDynamic1"
            android:layout_marginLeft="80dp"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"/>
        <TextView
            android:id="@+id/public_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:padding="@dimen/normal_space"
            android:textSize="@dimen/title_text_size"
            android:text="next"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LType"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motionType"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_type"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:text="Run" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LPublic"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publicTime"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_publicTime"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:text="2017-09-27" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LStartTime"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTime"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_startTime"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="2017-10-03" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LEndTime"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTime"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_endTime"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="2017-10-07" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LPlace"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_place"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="惠州市红花湖风景区" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LArea"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_area"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="惠州市" />

    </LinearLayout>

</LinearLayout>
