<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.user.sportslover.fragment.MyPageFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="260dp"
         android:orientation="vertical"
         android:background="@drawable/mybackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/normal_space"
                android:text="个人中心"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/UserPhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@null"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ic_empty_dish" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="点击登录"
                android:textSize="16dp" />

        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/sportsClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="运动等级"
                android:textSize="16dp" />
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/pbClass"
                android:max="100"
                android:progress="8"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:progressDrawable="@drawable/progressbar"
                android:visibility="visible"
                style="@android:style/Widget.ProgressBar.Horizontal" >
            </ProgressBar>
         <TextView
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvLV"
             android:layout_marginLeft="16dp"
             android:text="LV0"
             android:textSize="16dp"/>
    </LinearLayout>
</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">


            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/personalData"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:drawableTop="@drawable/personal_data"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center"
                android:padding="@dimen/normal_space"
                android:text="@string/personalData"
                android:textSize="16dp" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/motionRecord"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:drawableTop="@drawable/sports_records"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center"
                android:padding="@dimen/normal_space"
                android:text="@string/sportsRecords"
                android:textSize="16dp" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/motionGoal"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:drawableTop="@drawable/weekly_goals"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center"
                android:padding="@dimen/normal_space"
                android:text="@string/weeklyGoals"
                android:textSize="16dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/MyRecordRoute"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:drawableTop="@drawable/my_route"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center"
                android:padding="@dimen/normal_space"
                android:text="@string/myRoute"
                android:textSize="16dp" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/myMotion"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:drawableTop="@drawable/my_activity"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center"
                android:padding="@dimen/normal_space"
                android:text="@string/myActivity"
                android:textSize="16dp" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/setting"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:drawableTop="@drawable/setting4"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center"
                android:padding="@dimen/normal_space"
                android:text="@string/settings"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
